# eshop

./: catalog_data.json  pyproject.toml
blogs/: models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blog_is_published.py  0003_alter_blog_is_published.py  0004_alter_blog_image.py  0005_alter_blog_slug.py  0006_alter_blog_slug.py
blogs/templates/blogs/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_category_alter_product_changed_at_and_more.py  0004_contact.py  0005_version.py  0006_product_owner.py
catalog/templates/catalog/: base.html  contact_form.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: custom_tags.py
config/: settings.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_avatar.py  0003_user_generated_key_user_is_verified_user_user_key.py
users/templates/users/: login.html  register.html  user_form.html
